<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>cn.edu.nju.151250043</groupId>
    <artifactId>MyYacc</artifactId>
    <version>1.0-SNAPSHOT</version>

    <!-- This element indicates the display name used for the project. -->
    <name>MyYacc</name>

    <properties>
        <maven.compiler.source>1.9</maven.compiler.source>
        <maven.compiler.target>1.9</maven.compiler.target>
    </properties>

    <!-- This element provides a basic description of your project. This is often used in Maven's generated documentation. -->
    <description>语法分析器生成工具</description>

    <dependencies>
        <!-- For each external dependency, you'll need to define at least 4 things: groupId, artifactId, version, and scope.  -->

        <!-- https://mvnrepository.com/artifact/junit/junit -->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.12</version>
            <!-- The scope element indicates how your project uses that dependency, and can be values like compile, test, and runtime.  -->
            <scope>test</scope>
        </dependency>

        <!-- https://mvnrepository.com/artifact/log4j/log4j -->
        <dependency>
            <groupId>log4j</groupId>
            <artifactId>log4j</artifactId>
            <version>1.2.17</version>
            <scope>compile</scope>
        </dependency>

    </dependencies>

</project>